fix(dropdown): fix alignment of component

--- a/packages/ui/src/assets/css/dropdownMenu.css
+++ b/packages/ui/src/assets/css/dropdownMenu.css
@@ -1,12 +1,14 @@
-.dz-dropdown-menu-trigger {
-  padding: 0.5rem;
+ .dz-dropdown-menu-trigger {
+  display: flex;
+  align-items: center;
+  padding: 0.65rem;
 }
 
 .dz-dropdown-menu-trigger .dz-icon {
   display: inline-block;
   transition: transform 0.3s ease;
   transform-origin: center;
-  margin-left: 1.25rem;
+  margin-left: 0.5rem;
 }
 
 .popup-trigger[aria-expanded="true"] .dz-dropdown-menu-trigger .dz-icon {
@@ -44,6 +46,7 @@ ul.dz-dropdown-menu li[aria-disabled="true"] {
 
 ul.dz-dropdown-menu li:hover {
   background-color: var(--dropdown-bg-color-hover, #e5e5e5);
+  border-radius: 0;
 }
 
 @media screen and (min-width: 576px) {
